feat: implement new dashboard features